--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
 <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
 
     <title>Valentin Trisson</title>
     <meta name="description" content="Portfolio de Valentin Trisson">
@@ -23,7 +23,7 @@
 
 <body id="root" class="french">
     <header id="header">
-        <div id="header-logo"><img src="ressources/images/Mccree_Profile_Picture.png"></div>
+        <div id="header-logo"><img src="ressources/images/Logo-Blanc.svg"></div>
         <div id="header-links">
             <a href="cv.html">CV</a>
             <a href="portfolio.html">Portfolio</a>
